[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "smerf"
version = "0.9.0"
dependencies = [
    "absl-py==2.1.0",
    "camp_zipnerf @ git+https://github.com/jonbarron/camp_zipnerf.git",
    "chex==0.1.85",
    "diffren @ git+https://github.com/google-research/diffren.git",
    "dm-pix==0.4.2",
    "e3x==1.0.2",
    "etils==1.8.0",
    "flax==0.7.5",
    "gin-config==0.5.0",
    "jax==0.4.23",
    "jaxlib",
    "matplotlib==3.8.4",
    "mediapy==1.2.0",
    "numpy==1.26.4",
    "orbax-checkpoint==0.5.7",
    "opencv-python==4.9.0.80",
    "optax==0.2.1",
    "orbax==0.1.9",
    "pillow==10.2.0",
    "pycolmap @ git+https://github.com/rmbrualla/pycolmap.git",
    "scikit-image==0.23.2",
    "scipy==1.11.0",
    "tensorstore==0.1.51",
    "tqdm==4.66.4",
]
authors = [
    {name = "Daniel Duckworth"},
    {name = "Peter Hedman"},
]
description = "Official implementation of SMERF."

license = {file = "LICENSE"}
readme = "README.md"

[tool.setuptools.packages.find]
where = [""]
include = ["smerf*"]  # only publish one folder: "smerf"
